; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_remotes.c_test_online_remotes__detached_remote_fails_pushing.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_remotes.c_test_online_remotes__detached_remote_fails_pushing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@URL = common dso_local global i32 0, align 4
@GIT_DIRECTION_FETCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_online_remotes__detached_remote_fails_pushing() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @URL, align 4
  %3 = call i32 @git_remote_create_detached(i32** %1, i32 %2)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32*, i32** %1, align 8
  %6 = load i32, i32* @GIT_DIRECTION_FETCH, align 4
  %7 = call i32 @git_remote_connect(i32* %5, i32 %6, i32* null, i32* null, i32* null)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_remote_push(i32* %9, i32* null, i32* null)
  %11 = call i32 @cl_git_fail(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_remote_free(i32* %12)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_remote_create_detached(i32**, i32) #1

declare dso_local i32 @git_remote_connect(i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_remote_push(i32*, i32*, i32*) #1

declare dso_local i32 @git_remote_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
